@@ -319,7 +319,7 @@ get_exclude_patterns <- function()
                     ## inst may not yet exist
                     dir.create(doc_dir, recursive = TRUE, showWarnings = FALSE)
                     tocopy <- c(vigns$docs, vigns$outputs, unlist(vigns$sources))
-                    copied <- file.copy(tocopy, doc_dir)
+                    copied <- file.copy(tocopy, doc_dir, copy.date = TRUE)
                     if (!all(copied)) {
                     	warning(sQuote("inst/doc"),
                     	        ngettext(sum(!copied), " file\n", " files\n"),
@@ -328,7 +328,7 @@ get_exclude_patterns <- function()
 			        "\n  ignored as vignettes have been rebuilt.",
 			        "\n  Run R CMD build with --no-build-vignettes to prevent rebuilding.",
 			     call. = FALSE)
-			file.copy(tocopy[!copied], doc_dir, overwrite = TRUE)
+			file.copy(tocopy[!copied], doc_dir, overwrite = TRUE, copy.date = TRUE)
 		    }
                     unlink(c(vigns$outputs, unlist(vigns$sources)))
                     extras_file <- file.path("vignettes", ".install_extras")
@@ -342,7 +342,7 @@ get_exclude_patterns <- function()
                             for (e in extras)
                                 inst <- inst | grepl(e, allfiles, perl = TRUE,
                                                      ignore.case = TRUE)
-                            file.copy(allfiles[inst], doc_dir, recursive = TRUE)
+                            file.copy(allfiles[inst], doc_dir, recursive = TRUE, copy.date = TRUE)
                         }
                     }
                 }
@@ -916,8 +916,8 @@ get_exclude_patterns <- function()
         Tdir <- tempfile("Rbuild")
         dir.create(Tdir, mode = "0755")
         if (WINDOWS) {
-            ## This preserves read-only for files, but not dates
-            if (!file.copy(pkgname, Tdir, recursive = TRUE)) {
+            ## This preserves read-only for files, and (as of r71464) dates
+            if (!file.copy(pkgname, Tdir, recursive = TRUE, copy.date = TRUE)) {
                 errorLog(Log, "copying to build directory failed")
                 do_exit(1L)
             }
